chore: Update docs with correct informations